chrome misalignment fix

--- a/public/stylesheet/copy-button.css
+++ b/public/stylesheet/copy-button.css
@@ -14,7 +14,6 @@
   width: 180px;
   height: 38px;
   clip-path: inset(0px 0px 0px 0px);
-  transform: translateY(-0.33rem);
 }
 
 .copy-button:hover {
